--- a/index.css
+++ b/index.css
@@ -23,11 +23,24 @@
   margin: 10px;
 }
 
-.res-card{
+.res-container {
+  display: flex;
+  flex-wrap: wrap; 
+}
+
+.res-card{ 
+  padding: 5px;
   width: 200px;
   height: 300px;
-  border: 1px solid black;
+  margin: 5px;
+  /* border: 1px solid black; */
+  /* background-color: #f0f0f0; */
+}
+
+.res-card:hover{
+  cursor: pointer;
   background-color: #f0f0f0;
+  border: 1px solid black;
 }
 
 .search {
@@ -35,6 +48,5 @@
 }
 
 .res-logo{
-  padding: 5px;
-  width: 200px;
+  width: 100%;
 }
