--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
   width: 200px;
   margin: 5px;
   /* border: 1px solid black; */
-  /* background-color: #f0f0f0; */
+  background-color: #f0f0f0;
 }
 
 .res-card:hover{
