--- a/index.css
+++ b/index.css
@@ -4,8 +4,13 @@
   overflow-x: hidden;
 }
 
-/* ====================header============================ */
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: #f5f5f5;
+}
 
+/* ====================header============================ */
 .header {
   display: flex;
   justify-content: space-between;
@@ -24,13 +29,6 @@
   transition: all 0.3s ease-in-out;
 }
 
-/* .logo{
-  padding: 5px;
-  width: 90px;
-  border-radius: 50%;
-  cursor: pointer;
-} */
-
 .logo {
   width: 60px;
   display: flex;
@@ -40,24 +38,10 @@
   cursor: pointer;
 }
 
-/* .nav-items{   
-  padding: 0 10px 0;
-  width: auto;
-}
-
-.nav-items > ul{
-  list-style-type: none;
-  display: flex;
-}
-
-.nav-items > ul > li{
-  padding: 40px 20px 0 0;
-  font-size: large;
-  cursor: pointer;
-} */
-
 /* =============== Nav bar ============================= */
 .nav-items {   
+  list-style-type: none;
+  display: flex;
   padding: 0 20px;
   width: auto;
 }
@@ -94,7 +78,6 @@
 .nav-items > ul > li a:hover {
   color: #ffcc00;
 }
-
 /* =====================nav done================= */
 
 .res-container {
@@ -129,9 +112,8 @@
   cursor: pointer;
 }
 
-.footer{
-  display: flex;
-  justify-content: space-between;
+/* =======================footer==================== */
+/* .footer{
   align-items: center;
   padding: 10px 25px;
   margin: 20px auto;
@@ -145,4 +127,19 @@
   font-size: 1.2rem;
   font-weight: bold;
   transition: all 0.3s ease-in-out;
+} */
+
+.footer {
+  text-align: center;
+  padding: 10px;
+  padding: 10px 25px;
+  margin: 20px auto;
+  width: 90%;
+  max-width: 1200px;
+  background: rgba(50, 50, 50, 0.9);
+  box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
+  color: white;
+  font-size: 0.9rem;
+  margin-top: 30px;
+  border-radius: 8px;
 }
