--- a/index.css
+++ b/index.css
@@ -17,16 +17,12 @@ body {
   align-items: center;
   padding: 10px 25px;
   margin: 20px auto;
-  width: 90%;
+  /* width: 90%; */
   max-width: 1200px;
   background: rgba(50, 50, 50, 0.9);
   border-radius: 12px;
   box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
   color: #f8f8f8;
-  font-size: 1.2rem;
-  font-weight: bold;
-  transition: all 0.3s ease-in-out;
 }
 
 .logo {
@@ -78,34 +74,55 @@ body {
 .nav-items > ul > li a:hover {
   color: #ffcc00;
 }
-/* =====================nav done================= */
 
-.res-container {
-  display: flex; 
-  flex-wrap: wrap; 
-}
-
-.res-card{ 
-  padding: 5px;
-  width: 200px;
-  margin: 5px;
-  /* border: 1px solid black; */
-  background-color: #f0f0f0;
-}
-
-.res-card:hover{
-  cursor: pointer;
-  background-color: #f0f0f0;
-  border: 1px solid black;
-}
-
+/* ===============res card/search===================== */
 .search {
   padding: 10px;
 }
 
-.res-logo{
-  width: 100%;
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  /* padding: 50px; */
+  justify-content: flex-start;
 }
+
+.res-card {
+  padding: 10px;
+  width: 220px;
+  height: 300px;
+  margin: 10px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  /* text-align: center; */
+}
+
+.res-card:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.res-card h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 8px;
+}
+
+.res-logo {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+/* .res-logo{
+  width: 100%;
+} */
 
 .filter-btn{
   margin: 10px;
@@ -113,33 +130,17 @@ body {
 }
 
 /* =======================footer==================== */
-/* .footer{
-  align-items: center;
-  padding: 10px 25px;
-  margin: 20px auto;
-  width: 90%;
-  max-width: 1200px;
-  background: rgba(50, 50, 50, 0.9);
-  border-radius: 12px;
-  box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
-  color: #f8f8f8;
-  font-size: 1.2rem;
-  font-weight: bold;
-  transition: all 0.3s ease-in-out;
-} */
-
 .footer {
   text-align: center;
   padding: 10px;
   padding: 10px 25px;
   margin: 20px auto;
-  width: 90%;
+  /* width: 90%; */
   max-width: 1200px;
   background: rgba(50, 50, 50, 0.9);
   box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
   color: white;
-  font-size: 0.9rem;
   margin-top: 30px;
   border-radius: 8px;
+  cursor: pointer;
 }
