--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   /* margin: 0; */
   margin-top: 120px;
   font-family: "Poppins", sans-serif;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 /* ====================header============================ */
@@ -18,8 +18,8 @@ body {
   align-items: center;
   
   padding: 20px 100px;
-  background: rgba(197, 197, 197, 0.9);
-  box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
+  background: rgba(225, 225, 225, 0.96);
+  /* box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3); */
   color: #303030;
   /* border-radius: 12px; */
   /* margin: 20px auto; */
@@ -75,6 +75,7 @@ body {
 .nav-items > ul > li:hover {
   color: #ff4d00; /* Highlight effect */
   /* transform: translateY(-2px); Slight lift effect */
+  /* text-decoration: underline; */
 }
 
 /* Optional: If links are inside <a> tags */
@@ -113,14 +114,16 @@ body {
   margin: 10px;
   background: white;
   border-radius: 10px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-  transition: transform 0.1s ease-in-out, box-shadow 0.3s ease-in-out;
+  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); */
+  /* box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px; */
+  transition: transform 0.2s, box-shadow 0.3s ease-in-out;
   /* text-align: center; */
 }
 
 .res-card:hover {
-  transform: scale(.98);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  transform: scale(.95);
+  /* box-shadow: 0px 2px 2px rgb(255, 68, 0); */
+  box-shadow: #ff4d0095 0px 0px 0px 2px;
   cursor: pointer;
 }
 .res-name {
@@ -191,8 +194,8 @@ body {
   text-align: center;
   padding: 10px 25px;
   height: 200px;
-  background: rgba(197, 197, 197, 0.9);
-  box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3);
+  background: rgba(225, 225, 225);
+  /* box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.3); */
   color: #303030;
   margin-top: 30px;
   cursor: pointer;
