--- a/index.css
+++ b/index.css
@@ -109,8 +109,8 @@ body {
 
 .res-card {
   padding: 10px;
-  width: 220px;
-  height: 300px;
+  width: 250px;
+  height: 320px;
   margin: 1px;
   background: white;
   border-radius: 10px;
@@ -175,8 +175,8 @@ body {
 
 .res-logo {
   width: 100%;
-  height: 150px;
-  object-fit: cover;
+  height: 200px;
+  /* object-fit: cover; */
   border-radius: 8px;
 }
 
