--- a/index.css
+++ b/index.css
@@ -176,7 +176,7 @@ body {
 .res-logo {
   width: 100%;
   height: 200px;
-  /* object-fit: cover; */
+  object-fit: cover;
   border-radius: 8px;
 }
 
