--- a/index.css
+++ b/index.css
@@ -110,10 +110,10 @@ body {
 .res-card {
   padding: 10px;
   width: 250px;
-  /* height: 350px; */
   margin: 1px;
   background: white;
   border-radius: 10px;
+  /* gap: 10px; */
   /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); */
   /* box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px; */
   transition: transform 0.2s, box-shadow 0.3s ease-in-out;
@@ -185,7 +185,7 @@ body {
 } */
 
 .filter-btn{
-  margin: 10px;
+  margin-left: 30px;
   cursor: pointer;
 }
 
