--- a/src/components/RestaurantMenu.css
+++ b/src/components/RestaurantMenu.css
@@ -47,7 +47,7 @@
   text-align: center;
 }
 
-.menu-list {
+/* .menu-list {
   list-style: none;
   padding: 0;
   text-align: center;
@@ -61,4 +61,4 @@
   border-radius: 5px;
   display: inline-block;
   width: 100px;
-}
+} */
