--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -10,6 +10,7 @@
   gap: 10px;
   margin: 20px auto;
   width: 100%;
+  padding-top: 20px;
 }
 
 .search input {
@@ -55,4 +56,18 @@
   .search button {
     width: 50%;
   }
+}
+
+.title-container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0px 0px 15px 20px ;
+}
+
+.title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  color: #434343;
 }
