--- a/src/components/restaurantCard.css
+++ b/src/components/restaurantCard.css
@@ -1,4 +1,8 @@
 /* ===============restaurant card===================== */
+.body {
+  /* padding: 5px; */
+}
+
 .res-container {
   display: flex;
   flex-wrap: wrap;
@@ -6,45 +10,49 @@
   justify-content: space-evenly;
   max-width: 1200px;
   margin: 0 auto;
-  /* padding: 50px; */
-  /* justify-content: flex-start; */
-  /* height: 90%; */
+  padding: 0px 20px 20px 20px;
+}
+
+.res-container a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .res-card {
   padding: 10px;
   width: 250px;
-  margin-block: 5px;
+  min-height: 360px;
+  margin: 5px;
   background: white;
   border-radius: 10px;
+  box-shadow: #f3f3f3 0px 0px 0px 2px;
   transition: transform 0.2s, box-shadow 0.3s ease-in-out;
-  /* gap: 10px; */
-  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); */
-  /* box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px; */
-  /* text-align: center; */
 }
 
 .res-card:hover {
   transform: scale(.95);
-  /* box-shadow: 0px 2px 2px rgb(255, 68, 0); */
+  /* border: 2px solid rgb(255, 68, 0); */
   box-shadow: #ff4d0095 0px 0px 0px 2px;
   cursor: pointer;
 }
-.res-name {
-  font-size: 1.2rem;
-  font-weight: bold;
+
+.res-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 5px;
 }
 
-.res-cuisine{
-  padding: 5px;
-  font-size: 0.8rem;
-  color: #555;
-}
-
-.res-location {
-  padding: 5px;
-  font-size: 0.9rem;
-  color: #232323;
+.res-details {
+  width: 90%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 4px;
+  /* border: 1px solid #707070; */
+  margin: 0 auto;
 }
 
 .res-info {
@@ -55,8 +63,13 @@
   margin-top: 4px;
 }
 
+.res-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
 .res-rating {
-  background-color: #28a745;
+  background-color: #32cd32;
   color: white;
   font-size: 0.85rem;
   font-weight: bold;
@@ -77,19 +90,15 @@
   color: #333;
 }
 
-.res-logo {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
+.res-cuisine{
+  padding: 5px;
+  font-size: 0.8rem;
+  color: #555;
 }
 
-/* .res-logo{
-  width: 100%;
-} */
-
-.filter-btn{
-  margin-left: 30px;
-  cursor: pointer;
+.res-location {
+  padding: 5px;
+  font-size: 0.9rem;
+  color: #232323;
 }
 
