--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,6 +1,6 @@
 /* ===============search and filter===================== */
 .body{
-  border: #ff6600 2px solid;
+  /* border: #ff6600 2px solid; */
 }
 
 .search {
