about us styling done

--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@
 body {
   margin-top: 90px;
   font-family: "Poppins", sans-serif;
-  background-color: #ffffff;
+  background-color: #FFF8F1;
 }
 
 
