--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,46 +1,99 @@
-.about-container{
-  border: #ff6600 2px solid;
-}
-
 .about-container {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  margin: 0px auto 0px;
-  justify-content: center;
   align-items: center;
-  height: 72vh;
+  justify-content: space-between;
+  padding: 40px;
+  background-color: #fff8f1;
+  color: #333;
+  font-family: 'Poppins', sans-serif;
 }
-.about-left {
-  padding-left: 10px;
+
+.about-detail {
+  width: 60%;
 }
-.about-left h1 {
-  font-size: 70px;
+
+.about-detail h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  line-height: 1.2;
 }
-h1 span {
+
+.about-detail h1 span {
   background-color: #ff6600;
   padding: 0 10px;
   border-radius: 15px;
   color: white;
 }
-.tag {
-  background-color: #ff6600;
-  padding: 0 10px;
-  border-radius: 15px;
-  color: white;
+
+.about-detail .tag {
+  color: #ffffff;
+  font-size: 3rem;
+  font-weight: bold;
 }
-.about-left h4 {
-  font-size: 25px;
-  padding-top: 10px;
+
+.about-detail h4 {
+  font-size: 1.2rem;
   font-style: italic;
+  margin-top: 10px;
+  color: #666;
 }
-h4 span {
-  color: #000000;
+
+.about-detail p {
+  font-size: 1rem;
+  margin-top: 15px;
+  line-height: 1.5;
 }
-.about-right {
-  padding-left: 20px;
+
+.about-detail ul {
+  margin-top: 15px;
+  list-style: none;
+  padding: 0;
 }
-.about-right img {
-  width: 500px;
-  padding-right: 70px;
+
+.about-detail ul li {
+  font-size: 1rem;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.about-detail ul li::before {
+  content: "✔";
+  color: #28a745;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.about-detail h3 {
+  margin-top: 20px;
+  font-size: 1.2rem;
+  color: #ff5733;
+}
+
+.about-img {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+}
+
+.about-img .image {
+  width: 100%;
+  max-width: 450px;
+  object-fit: contain;
+  animation: float 3s ease-in-out infinite;
+}
+
+@media (max-width: 768px) {
+  .about-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-detail, .about-img {
+    width: 100%;
+  }
+
+  .about-img {
+    margin-top: 20px;
+  }
 }
