--- a/src/components/restaurantCard.css
+++ b/src/components/restaurantCard.css
@@ -23,7 +23,7 @@
   width: 250px;
   min-height: 360px;
   margin: 5px;
-  background: white;
+  background: #FFF8F1;
   border-radius: 10px;
   box-shadow: #f3f3f3 0px 0px 0px 2px;
   transition: transform 0.2s, box-shadow 0.3s ease-in-out;
@@ -34,6 +34,7 @@
   /* border: 2px solid rgb(255, 68, 0); */
   box-shadow: #ff4d0095 0px 0px 0px 2px;
   cursor: pointer;
+  background: white;
 }
 
 .res-img {
