--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 40px;
+  padding: 20px 20px 20px 40px ;
   background-color: #fff8f1;
   color: #333;
   font-family: 'Poppins', sans-serif;
