--- a/src/components/restaurantCard.css
+++ b/src/components/restaurantCard.css
@@ -1,16 +1,11 @@
 /* ===============restaurant card===================== */
-.body {
-  /* padding: 5px; */
-}
 
 .res-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 10px;
-  justify-content: space-evenly;
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 0px 20px 20px 20px;
 }
 
 .res-container a {
