--- a/src/components/restaurantCard.css
+++ b/src/components/restaurantCard.css
@@ -1,24 +1,17 @@
-/* ===============restaurant card===================== */
-
 .res-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.res-container a {
-  text-decoration: none;
-  color: inherit;
+  padding-bottom: 20px;
 }
 
 .res-card {
   padding: 10px;
   width: 250px;
   min-height: 360px;
-  margin: 5px;
+  margin: 15px;
   background: #FFF8F1;
   border-radius: 10px;
   box-shadow: #f3f3f3 0px 0px 0px 2px;
@@ -26,10 +19,8 @@
 }
 
 .res-card:hover {
-  transform: scale(.95);
-  /* border: 2px solid rgb(255, 68, 0); */
+  transform: scale(0.95);
   box-shadow: #ff4d0095 0px 0px 0px 2px;
-  cursor: pointer;
   background: white;
 }
 
@@ -42,21 +33,15 @@
 }
 
 .res-details {
-  width: 90%;
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 4px;
-  margin: 0 auto;
 }
 
 .res-info {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  margin-bottom: 4px;
-  margin-top: 4px;
+  margin: 4px 0;
 }
 
 .res-name {
@@ -76,25 +61,15 @@
   gap: 4px;
 }
 
-.res-rating i {
-  font-size: 0.85rem;
-}
-
 .res-distance,
 .res-price {
   font-size: 0.85rem;
   color: #333;
 }
 
-.res-cuisine{
+.res-cuisine,
+.res-location {
   padding: 5px;
   font-size: 0.8rem;
   color: #555;
 }
-
-.res-location {
-  padding: 5px;
-  font-size: 0.9rem;
-  color: #232323;
-}
-
