--- a/src/css/RestaurantMenu.css
+++ b/src/css/RestaurantMenu.css
@@ -1,49 +1,81 @@
 /* =======================restaurantMenu================= */
 .restaurant-container {
-  border: #ff6600 2px solid;
-  max-width: 800px;
+  max-width: 750px;
   margin: 0 auto;
-  padding: 20px;
   font-family: Arial, sans-serif;
+  background: #fff;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .restaurant-header {
-  background: #fff;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  border-radius: 12px;
+  margin-bottom: 15px;
+  overflow: hidden;
+  width: 100%;
+  border: 1px solid #e2e2e2;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
-.restaurant-header h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.restaurant-header img {
+  width: 100px; /* Reduce size */
+  height: 100px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-right: 20px;
 }
 
-.rating {
-  font-size: 18px;
+.res-header-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+}
+
+.res-header-details h1 {
+  font-size: 20px;
   font-weight: bold;
-  color: #4caf50;
 }
 
-.cost,
-.cuisines,
-.delivery-time {
-  font-size: 16px;
-  margin: 5px 0;
+.res-header-details h3 {
+  font-size: 14px;
   color: #666;
 }
 
-.menu-section {
-  margin-top: 20px;
-  padding: 15px;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+.res-header-details p {
+  font-size: 14px;
 }
 
-.menu-section h2 {
-  font-size: 22px;
-  margin-bottom: 10px;
-  text-align: center;
+.info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #444;
 }
+
+.star {
+  background-color: #32cd32;
+  padding: 2px 8px 2px 4px;
+  border-radius: 6px;
+  display: flex;
+}
+
+.cost {
+}
+
+.cuisines {
+  font-size: 14px;
+  color: #ff5e00;
+  font-weight: bold;
+}
+
+.delivery-time {
+}
+
