--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-}
+} */
 
 a {
   text-decoration: none;
